//bugs.freedesktop.org/show_bug.cgi?id=3950> Xorg prints version numbers in     wrong format for modules compiled for Xorg 6.99 & later (Adam Jackson &     Alan Coopersmith)